examples/good/in/03-01-variable-initialization.see
void main() {
    int a = 42, b = 10, c;
    bool x, y, z = false;
    string j, k = "Hello", l; printStr(l); // ""
    l = "Override";           printStr(l); // "Override"

    int(int) identity = int lambda(int x) => {
        return x;
    };

    return;
}