examples/bad/in/12-03-variable-types.see
void main() {
    int x = "some string";
    int y = int lambda() => { return 21; };

    int a = 15, b = "21";

    return;
}